(teranode split) Feature/tr 924 b-2/bsn performance refactor (#138)
* Including NetworkHandlerImpl from TR-924:
 - including Multithread Selectors and removing the use of LoggerUtils

* Revert "Including NetworkHandlerImpl from TR-924:"

This reverts commit 80d61afbfc56378703c38e1483a65af0639ec770.

* adding (again) NetworkHandlerImpl

* adding more changes from TR-924

* adding Changes in TN-Components mostly and some new msgs in JCL

* adding changes in JCl-Net Handlers

* adding missing new classes in jcl-tools

* make event queue processor blocking

* remove executor from EventStreamer

* prioritize socket write over read

* remove test logs

* Replaced LoggerUtils with SLF4J

* Adding fix for race-condition that makes to process the same connection twice

* stop output buffer when connection is closed

* MultiThread Selectors are back in town

* prevent channel not writable call to be to often

* make capacity test logging more informative

* add buffer configuration to config file

* make write selector permanent

* fix test implementations of BSN to start

* move default executor thread priority normal

* add description to BSN byte buffer configuration

* synchronize switch state method

* handle duplicated code for closing selector keys

* fix MessageHandlerState counter

* remove input byte buffer and process bytes directly

* remove abstract byte buffer

* rename buffer

* fix connection close

* move should process pending connections into ovn method

* fix capacity test random

* return constant directly

* close unwanted connection

* use conditional lock for writing in WriteBuffer

* stop pong if connection closed

* change default value of last_sent message to current time

* exclude compact blocks test

* change order of logs in got_message method

---------

Co-authored-by: Ivan <i.fernandez@nchain.com>
Co-authored-by: Bozo Dragojevic <b.dragojevic@nchain.com>