@@ -24,11 +24,11 @@ class StringNumberOutputStream extends PeerOutputStreamImpl<String, Integer> {
         super(peerAddress, destination);
     }
     @Override
-    public List<StreamDataEvent<Integer>> transform(StreamDataEvent<String> dataEvent) {
+    public List<Integer> transform(String dataEvent) {
         try { Thread.sleep(10);} catch (Exception e) {} // simulate real work
-        String data = dataEvent.getData();
+        String data = dataEvent;
         Integer result = Integer.valueOf(data.substring(1, data.length() - 1));
-        System.out.println(">> StringNumberOutputStream ::Receiving " + dataEvent.getData() + ", sending " + result);
-        return Arrays.asList(new StreamDataEvent<>(result));
+        System.out.println(">> StringNumberOutputStream ::Receiving " + dataEvent + ", sending " + result);
+        return List.of(result);
     }
 }
